--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <title>Peninah isaranwa</title>
   </head>
   <body>
+    <i class="fa-brands fa-instagram"></i>
     <h1>hello issa</h1>
     <p>Hey there</p>
   </body>
