Create a landing page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Vollkorn:ital@1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Vollkorn:ital,wght@0,400;0,500;1,400;1,500&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,8 +28,51 @@
     <title>Peninah isaranwa</title>
   </head>
   <body>
-    <i class="fa-brands fa-instagram"></i>
-    <h1>hello issa</h1>
-    <p>Hey there</p>
+    <nav class="navbar navbar-expand-lg nav-color">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Isaranwa</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My projects</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <h3>Hello</h3>
+    <h1>I am Isaranwa</h1>
+    <h2><i>A front-End developer from Kenya</i></h2>
+    <div class="button-links">
+      <a href="#" id="projects">My projects</a>
+      <a href="#" id="contacts">Contact me</a>
+    </div>
+    <div class="contacts">
+      <h3>Contact me</h3>
+      <i class="icon fa-brands fa-instagram"></i>
+      <i class="icon fa-regular fa-envelope"></i>
+      <i class="icon fa-brands fa-linkedin-in"></i>
+    </div>
   </body>
 </html>
