--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link" href="#">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">My projects</a>
@@ -67,6 +64,28 @@
     <div class="button-links">
       <a href="#" id="projects">My projects</a>
       <a href="#" id="contacts">Contact me</a>
+    </div>
+    <p>Featured below are some of my projects.</p>
+    <div class="container">
+      <div class="row mt-4">
+        <div class="col-sm-6">
+          <img
+            src="images/dictionary.png"
+            class="img-fluid border-4 shadow-lg rounded"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2>Dictionary App</h2>
+          <p>
+            A dictionary app that allows users to search for words and get their
+            definitions, pronunciation, synonyms & anton words. This project was
+            built using HTML5, CSS3, JavaScript, Bootstrap 4 framework and API's
+            (Google Dictionary). The website is responsive on all devices.
+          </p>
+          <p><i>check out the code on github bellow</i></p>
+          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+        </div>
+      </div>
     </div>
     <div class="contacts">
       <h3>Contact me</h3>
