Add projects to portfolio

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     </div>
     <p>Featured below are some of my projects.</p>
     <div class="container">
-      <div class="row mt-4">
-        <div class="col-sm-6">
+      <div class="row">
+        <div class="col-sm-6 mt-5">
           <img
             src="images/dictionary.png"
-            class="img-fluid border-4 shadow-lg rounded"
+            class="img-fluid border shadow-lg rounded-5"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mt-5">
           <h2>Dictionary App</h2>
           <p>
             A dictionary app that allows users to search for words and get their
@@ -84,6 +84,41 @@
           </p>
           <p><i>check out the code on github bellow</i></p>
           <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 mt-5">
+          <h2>Calculator App</h2>
+          <p>A simple iOS calculator app with basic arithmetic operations.</p>
+          <p><i>check out the code on github bellow</i></p>
+          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+        </div>
+        <div class="col-sm-6 mt-5">
+          <img
+            src="images/calculator.png"
+            class="img-fluid border shadow-lg rounded-5"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 mt-5">
+          <h2>Weather App</h2>
+          <p>
+            An application which displays weather information of a city entered
+            by user.It shows the daily weather predictions and the weekly
+            weather updates. Technologies used are HTML5,CSS3,
+            Javascript,Bootstrap 4 Framework,API's(Open Weather Map).
+          </p>
+
+          <p><i>check out the code on github bellow</i></p>
+          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+        </div>
+        <div class="col-sm-6 mt-5">
+          <img
+            src="images/weather app.png"
+            class="img-fluid border shadow-lg rounded-5"
+          />
         </div>
       </div>
     </div>
