Made webpage responsive

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-sm-6 mt-5">
           <img
             src="images/dictionary.png"
-            class="img-fluid border shadow-lg rounded-5"
+            class="img-fluid border shadow-lg rounded-5 d-none d-sm-block"
           />
         </div>
         <div class="col-sm-6 mt-5">
@@ -97,11 +97,17 @@
         <div class="col-sm-6 mt-5">
           <img
             src="images/calculator.png"
-            class="img-fluid border shadow-lg rounded-5"
+            class="img-fluid border shadow-lg rounded-5 d-none d-sm-block"
           />
         </div>
       </div>
       <div class="row">
+        <div class="col-sm-6 mt-5">
+          <img
+            src="images/weather app.png"
+            class="img-fluid border shadow-lg rounded-5 d-none d-sm-block"
+          />
+        </div>
         <div class="col-sm-6 mt-5">
           <h2>Weather App</h2>
           <p>
@@ -113,12 +119,6 @@
 
           <p><i>check out the code on github bellow</i></p>
           <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
-        </div>
-        <div class="col-sm-6 mt-5">
-          <img
-            src="images/weather app.png"
-            class="img-fluid border shadow-lg rounded-5"
-          />
         </div>
       </div>
     </div>
