--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My projects</a>
+              <a class="nav-link" href="#portfolio">My projects</a>
             </li>
           </ul>
         </div>
@@ -62,11 +64,11 @@
     <h1>I am Isaranwa</h1>
     <h2><i>A front-End developer from Kenya</i></h2>
     <div class="button-links">
-      <a href="#" id="projects">My projects</a>
-      <a href="#" id="contacts">Contact me</a>
+      <a href="#" id="projects">Download CV</a>
+      <a href="#contact" id="contacts">Contact me</a>
     </div>
     <p>Featured below are some of my projects.</p>
-    <div class="container">
+    <div class="container" id="portfolio">
       <div class="row">
         <div class="col-sm-6 mt-5">
           <img
@@ -122,11 +124,19 @@
         </div>
       </div>
     </div>
-    <div class="contacts">
+    <div id="contact">
       <h3>Contact me</h3>
-      <i class="icon fa-brands fa-instagram"></i>
-      <i class="icon fa-regular fa-envelope"></i>
-      <i class="icon fa-brands fa-linkedin-in"></i>
+      <div class="row">
+        <div class="col-sm-4">
+          <i class="icon fa-brands fa-instagram"></i>
+        </div>
+        <div class="col-sm-4">
+          <i class="icon fa-regular fa-envelope"></i>
+        </div>
+        <div class="col-4">
+          <i class="icon fa-brands fa-linkedin-in"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
