Added a project page

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <h2 class="d-inline"><i>Front-End developer from Kenya.</i></h2>
           <br />
           <br />
-          <a href="index.html#portfolio" id="projects">View projets</a>
+          <a href="projects.html" id="projects">View projets</a>
         </div>
         <div class="col-sm-6">
           <img
