--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">My projects</a>
+              <a class="nav-link" href="projects.html">My projects</a>
             </li>
           </ul>
         </div>
@@ -68,7 +68,7 @@
       <a href="#contact" id="contacts">Contact me</a>
     </div>
     <p>Featured below are some of my projects.</p>
-    <div class="container" id="portfolio">
+    <div class="container">
       <div class="row">
         <div class="col-sm-6 mt-5">
           <img
