--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#contact">contact me</a>
+              <a class="nav-link" href="contact.html">contact me</a>
             </li>
           </ul>
         </div>
