--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2><i>A front-End developer from Kenya</i></h2>
     <div class="button-links">
       <a href="#" id="projects">Download CV</a>
-      <a href="#contact" id="contacts">Contact me</a>
+      <a href="contact.html" id="contacts">Contact me</a>
     </div>
     <p>Featured below are some of my projects.</p>
     <div class="container">
@@ -85,7 +85,9 @@
             (Google Dictionary). The website is responsive on all devices.
           </p>
           <p><i>check out the code on github bellow</i></p>
-          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+          <a href="https://github.com/Isaranwa/dictionary-app"
+            ><i class="icon fa-brands fa-square-github"></i
+          ></a>
         </div>
       </div>
 
@@ -94,7 +96,9 @@
           <h2>Calculator App</h2>
           <p>A simple iOS calculator app with basic arithmetic operations.</p>
           <p><i>check out the code on github bellow</i></p>
-          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
+          <a href="https://github.com/Isaranwa/calculator-app"
+            ><i class="icon fa-brands fa-square-github"></i
+          ></a>
         </div>
         <div class="col-sm-6 mt-5">
           <img
@@ -120,21 +124,9 @@
           </p>
 
           <p><i>check out the code on github bellow</i></p>
-          <a href="#"><i class="icon fa-brands fa-square-github"></i></a>
-        </div>
-      </div>
-    </div>
-    <div id="contact">
-      <h3>Contact me</h3>
-      <div class="row">
-        <div class="col-sm-4">
-          <i class="icon fa-brands fa-instagram"></i>
-        </div>
-        <div class="col-sm-4">
-          <i class="icon fa-regular fa-envelope"></i>
-        </div>
-        <div class="col-4">
-          <i class="icon fa-brands fa-linkedin-in"></i>
+          <a href="https://github.com/Isaranwa/weather-app"
+            ><i class="icon fa-brands fa-square-github"></i
+          ></a>
         </div>
       </div>
     </div>
