--- a/index.html
+++ b/index.html
@@ -130,5 +130,21 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="d-flex justify-content-center mb-2 mt-3" id="email">
+        <a
+          href="mailto:pennyisaranwa@gmail.com "
+          class="text-decoration-none text-dark"
+          >pennyisaranwa@gmail.com</a
+        >
+      </div>
+      <div class="d-flex justify-content-center mb-5" id="icon">
+        <a href="#"><i class="fa-brands fa-facebook me-3 text-dark"></i></a>
+        <br />
+        <a href="#"><i class="fa-brands fa-instagram me-3 text-dark"></i></a>
+        <br />
+        <a href="#"><i class="fa-brands fa-github me-3 text-dark"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
