Removed footer on small devices

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="d-none d-sm-block">
       <div class="d-flex justify-content-center mb-2 mt-3" id="email">
         <a
           href="mailto:pennyisaranwa@gmail.com "
