Clean up code and Add media queries

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      @media (max-width: 600px) {
+        h4 {
+          display: none;
+        }
+        img {
+          margin-top: 30px;
+        }
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -25,7 +35,7 @@
           <br />
           <br />
           <a href="https://stalwart-kelpie-6222d3.netlify.app/" id="projects"
-            >Launch app</a
+            >Launch weather app</a
           >
         </div>
         <div class="col-sm-4">
@@ -39,7 +49,7 @@
           <a
             href="https://monumental-marshmallow-208268.netlify.app/"
             id="projects"
-            >Launch app</a
+            >Launch dictionary app</a
           >
         </div>
         <div class="col-sm-4">
@@ -51,7 +61,7 @@
           <br />
           <br />
           <a href="https://lucky-sorbet-cfbb01.netlify.app/" id="projects"
-            >Launch app</a
+            >Launch calculator app</a
           >
         </div>
       </div>
