--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,13 @@
       .content {
         text-align: center;
       }
-      .container {
-        background-color: #dc9aee;
-        border-radius: 10px;
-        box-shadow: 2px 2px 2px #000;
+      @media (max-width: 600px) {
+        h2 {
+          display: none;
+        }
+        .content {
+          text-align: left;
+        }
       }
     </style>
     <link
